# ASPico

./: .ghci  Makefile  README.md  aspico.cabal  stack.yaml
app/api/: Main.hs
deploy/: README.md  build.sh  deploy.sh
deploy/config/: keter.yaml
deploy/docker/: build.sh
src/: ASPico.hs
src/ASPico/: Api.hs  Client.hs  Config.hs  Db.hs  Dev.hs  Envelope.hs  Environment.hs  Error.hs  Form.hs  Handler.hs  Host.hs  Http.hs  Monad.hs  Orphans.hs  Prelude.hs  Servant.hs  Session.hs  Utils.hs
src/ASPico/Db/: Models.hs  Pool.hs  Run.hs
src/ASPico/Db/Models/: Base.hs  EntityDefs.hs
src/ASPico/Handler/: Consts.hs  Cookie.hs  Root.hs
src/ASPico/Handler/Root/: AffUrl.hs  Affiliate.hs  Conversion.hs  Record.hs  RegisterPush.hs  Track.hs
src/ASPico/Handler/Root/Conversion/: TH.hs
src/ASPico/Monad/: Base.hs  Db.hs  Http.hs
test/: DocTest.hs
